Fix alignment issue with the page title on index.hbs

--- a/app/styles/components/_typography.scss
+++ b/app/styles/components/_typography.scss
@@ -2,7 +2,10 @@
   text-align: center;
   position: absolute;
   width: 75%;
-  left: 12%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
   top: 40%;
   z-index: 1;
   font-size: 5rem;
